--- a/css/main.css
+++ b/css/main.css
@@ -19,12 +19,16 @@ width: 200px;}
 }
 
  .navbar-nav .nav-item .nav-link{
-    color:#969696;
+    color:#fff;
     font-size: 18px;
 }
-.navbar-nav .nav-item .nav-link:hover{color:#8e7754;}
+.navbar-nav .nav-item .nav-link:hover{
+    color:#8e7754;
+    transition: 0.5s;
+    text-decoration: underline !important;
+}
 .navbar.scrolled {
-    background-color: #fff  !important;
+    background-color: #865236     !important;
     transition: background-color 200ms linear;
     background-image: url(../data/bakery-color.png);
     background-repeat: no-repeat;
@@ -122,26 +126,30 @@ width: 200px;}
 }
 /*location section end*/
 /*ourbaking section start*/
+.row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .ourbaking{
-    height: 500px;
-    margin-top: 30px;
+    height: 50vh;
+    margin-top: 60px;
 }
-.ourbaking img{
-    margin-top: 30px;
-    width: 400px;
-    margin-left: 20px;
-}
-.ourbaking h4{
+/* .ourbaking img{
+
+    width: 100%;
+} */
+/* .ourbaking h4{
    position: relative;
    top:5px;
 color: black;
-}
+} */
 /*ourbaking section end*/
 
 /*contact info section start*/
 .contact-info{
-    margin-top: 20px;
-    height: 500px;
+    margin-top: 100px;
+    height: 90vh;
     overflow: hidden;
     background-color: #EEE;
     padding: 30px;
@@ -156,6 +164,7 @@ h4{
     color:#fff;
 }
 .about-us{
+    /* height: 80vh; */
     margin-top: 30px;
     background-image: url("../data/contact-details-map.png");
     background-repeat: no-repeat;
@@ -165,54 +174,20 @@ h4{
     opacity: .9;
     color:#969696;
     padding: 30px;
-font-size: 15px;}
+    font-size: 15px;
+}
 .about-us li{
     list-style-type:none;
-}
-.about-us li::before{
-    content: ' >   ';
-
 }
 
 /*about-us section end*/
 /*footer start*/
 
 footer{
-
-    height: 400px;
+    height: 15vh;
     background-color: #353330;
-    padding-top: 60px;
-}
-.ftext{
-    margin-top: 30px;
-    font-size: 16px;
-    color: gray;
-}
-.icon{
-    margin-top: 60px;
-    padding-left: 40px;
 }
 
-.fa-facebook:hover{
-color:blue;
-background-color:white;
-border-radius: 50%;
-}
-.fa-google-plus:hover{
-    color:red;
-    background-color:white;
-    border-radius: 50%;
-    }
-    .fa-linkedin-in:hover{
-        color:white;
-        background-color:lightskyblue;
-        border-radius: 100%;
-        }
-        .fa-twitter:hover{
-            color:white;
-            background-color:lightblue;
-            border-radius: 50%;
-            }
 /*footer end*/
 /*about page and offer page ///////////////////////////////////////
 
@@ -221,7 +196,7 @@ border-radius: 50%;
     position:fixed;
     width: 100%;
     height: 80px;
-    background-color: white;
+    background-color: #EEE;
     background-image: url(../data/bakery-color.png);
     background-repeat: no-repeat;
     background-size: contain;
@@ -234,45 +209,15 @@ border-radius: 50%;
 }
 .aboutnav.nav-link:hover{color:#8e7754;}
 /* start main section */
-.mainsection{
+/* .mainsection{
     background-image: url(../data/Untitled.png);
     background-size:100vw;
     background-repeat: no-repeat;
     height:30vw;
 
-}
-.pmain{
-    color: white;
-    font-weight: bolder;
-    position:absolute;
-    top: 300px;
-    left: 500px;
-}
-/* end main section */
-/* secand start */
-.secand{
-    margin-top: 20px;
-    padding: 20px;
-    height: 500px;
-}
-.secand img{
-    width: 600px;
-    height: 450px;
-}
-/* secand end */
-.third{
-    margin-top: 30px;
-    padding: 30px;
-    background-color: #eee;
+} */
 
-}
-.third h3{
-    margin-bottom: 40px;
-}
-.third h4{
-    color:black;
-    margin-top: 60px;
-}
+/* secand end */
 .fourth{
     margin-top: 40px;
     background-color: #8e7754;
